--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>SVG Bubble Slider</title>
 
-	<link rel="icon" type="image/svg+xml" href="../letter-m.png">
+	<link rel="icon" type="image/svg+xml" href="letter-m.png">
 
 	<link href='https://fonts.googleapis.com/css?family=Passion One' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
